[2020-04-01]html,css update(selector)

--- a/www_root/form/input.html
+++ b/www_root/form/input.html
@@ -24,8 +24,21 @@
         <input type="image" src="/img/cat/cat01.jpg" height="200" onclick="alert('고양이01번');">
         <h2>number</h2><hr>
         <input type="number" name="quantity">
+        <h2>password</h2><hr>
+        <input type="password" name="password">
+        <h2>radio</h2><hr>
+        <input type="radio" name="gender" value="1" checked>남자<br>
+        <input type="radio" name="gender" value="2">여자<br>
+        <input type="radio" name="number" value="1">1<br>
+        <input type="radio" name="number" value="2" checked>2<br>
+        <input type="radio" name="number" value="3">3<br>
+        <h2>range</h2><hr>
+        <input type="range" name="points" min="0" max="10" step="0.1" value="5" >
+        <h2>reset</h2><hr>
+        <input type="reset">
         <h2>button</h2><hr>
-        <input type="submit" name="" value="action으로 보내기">
+        <input type="submit" value="action으로 보내기">
+        
     </form>
 </body>
 </html>
