--- a/www_root/html/05_display/display2.html
+++ b/www_root/html/05_display/display2.html
@@ -5,18 +5,48 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
     <style>
+        /* inline
         span{
             background-color: lightpink;
             color:lightyellow;
             padding: 10px;
             line-height: 50px;
+        } */
+        .wrapper{
+            font-size: 0;
+        }
+        .inline-block{
+            display: inline-block;
+            vertical-align: middle;
+            border: 3px solid lightseagreen;
+            font-size: 16px;
+        }
+        .box1 {
+            width: 300px;
+            height: 70px;
+        }
+        .box2 {
+            width: 300px;
+            height: 150px;
         }
     </style>
 </head>
 <body>
+    <!-- inline 
     <h1>My <span>Important</span> Heading</h1>
     <span>Inline </span>
     <span>Inline </span>
     <span>Inline</span>
+    -->
+    <!-- inline-block 
+    한줄에 / width, height, padding, margine, line-height
+    4px blank 
+    -->
+    <div class="inline-block box1">inline-block height 70px</div>
+    <div class="inline-block box2">inline-block height 150px</div>
+    <div class="wrapper">
+        <div class="inline-block box1">inline-block height 70px</div>
+        <div class="inline-block box2">inline-block height 150px</div>
+    </div>
 </body>
 </html>
