--- a/www_root/css/10_layout/layout.html
+++ b/www_root/css/10_layout/layout.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
     <style>
+        
+        *{
+            margin: 0; padding: 0;
+            box-sizing: border-box;
+        }
         body {
             font-family: sans-serif;
             color: #58666e;
@@ -17,11 +22,18 @@
         a{
             text-decoration: none;
         }
+        /* header nav */
         header{
+            position: fixed;
+            top: 0;
             width: 100%;
             height: 60px;
             background-color: #fff;
-            box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
+        }
+        #wrap{
+            width: 100%;
+            margin-top: 60px;
         }
         nav{float: right;}
         .logo{
@@ -29,8 +41,9 @@
             height: 36px;
             margin: 12px 0 12px 25px;
         }
-        .logo>img{
-            height:36px;
+        .logo>img{height:36px;}
+        .nav-items{
+            margin-right: 20px;
         }
         .nav-items>li{
             display:inline-block;
@@ -43,10 +56,68 @@
         .nav-items>li>a:hover{
             color: rgba(0, 0, 0, 0.8);
         }
+        /* Aside nav */
+        #content-wrap:after{
+            content: "";
+            display: block;
+            clear: both;
+        }
+        aside{
+            z-index: 1000;
+            position: fixed;
+            top: 60px;
+            bottom: 0;
+            width: 200px;
+            padding-top: 25px;
+            background-color: #333;
+        }
+        aside > ul{
+            width: 200px;
+        }
+        aside > ul > li > a{
+            display: block;
+            color: #fff;
+            padding: 10px 0 10px 20px;
+        }
+        aside > ul > li > a.active{
+            background-color: #4caf50;
+        }
+        aside > ul > li > a:hover:not(.active){
+            background-color: #555;
+        }
+        aside > h1{
+            padding: 20px 0 20px 20px;
+            color: #fff;
+        }
+        h1{ font-size: 1.8em; }
+        h1, h2, h3, h4, h5, h6, p{
+            margin: 10px 5px;
+        }
+        section{
+            float: right;
+            margin-left: 200px;
+        }
+        article{
+            margin: 10px;
+            padding: 25px;
+            background-color: white;
+        }
+        footer{
+            z-index: 100;
+            text-align: right;
+            position: absolute;
+            height: 60px;
+            width: 100%;
+            padding: 0 25px;
+            line-height: 60px;
+            color: #8a8c8f;
+            border-top: 1px solid #dee5e7;
+            background-color: #f2f2f2;
+        }
     </style>
 </head>
 <body>
-    <div class="wrap">
+    <div id="wrap">
         <header>
             <a href="#" class="logo">
                 <img src="https://t1.daumcdn.net/daumtop_chanel/op/20170315064553027.png" alt="daum logo" height="36px">
@@ -99,6 +170,7 @@
             </section>
         </div>
         <!-- end of content-wrap -->
+        <footer>&copy Copyleft 2020 kimhg</footer>
     </div>    
     <!-- end of wrap -->
 </body>
