--- a/www_root/html/html/test.html
+++ b/www_root/html/html/test.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/script.js"></script>
+    <script src=/js/script.js></script>
 </head>
 <body>
 <h1>
-index.html<br>
+test.html<br>
 - /index.html<br>
     <a href="/index.html">/index.html</a>
 <hr>
