[2020-04-09]update(js, mypage)

--- a/www_root/js/js.html
+++ b/www_root/js/js.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="myElem">myElem</div>
-    <input type="text" class="myElem" value="myElem">
-<script src="06_object.js"></script> 
+    <h1>index.html</h1>
+    <p id="demo"></p>
 </body>
 </html>
