[2020-04-10]update(DOM, mypage-carousel)

--- a/www_root/js/js.html
+++ b/www_root/js/js.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .red{color: #ff0000;}
+        .blue{color: #0000ff;}
+        .yellow{color: yellow;}
+        .backblue{background-color: lightblue;}
+    </style>
 </head>
 <body>
-    <h1>index.html</h1>
-    <p id="demo"></p>
+    <div>
+        <h1>cities</h1>
+        <ul>
+            <li class="red" id="one">Seoul</li>
+            <li class="red" id="two">London</li>
+            <li class="red" id="three">Newyork</li>
+            <li id="four">Tokyo</li>
+        </ul>
+    </div>
+    <input type="text"><br>
+    <input type="password" class="password" value="123"><br>
+    <input type="button" class="show" value="show">
+<script src="14_DOM.js">
+</script>
 </body>
 </html>
