--- a/www_root/storyboard/html/join/join.html
+++ b/www_root/storyboard/html/join/join.html
@@ -4,39 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../css/common.css"></link>
+    <link rel="stylesheet" href="../../css/common.css">
+    <link rel="stylesheet" href="../../css/join.css">
     <style>
-        div{
-            position:relative;
-            background-color: #fff;
-            margin: 10px 5px;
-        }
-        div>h2{
-            position:relative;
-            float:left;
-            margin: 20px 5px 0px;
-        }
-        .title{
-            font-size: 1.5em;
-            padding: 10px;
-            font-weight: bold;
-        }
-        .input input{
-            width:95%;
-            height:40px;
-            margin:15px 5px;
-        }
-        .button input{
-            width:10%;
-            padding: 5px;
-            margin: 0px 5px;
-            float: right;
-        }
+
+
     </style>
 </head>
 <body>
-    <div class="title">회원 가입</div>
-    <div class="input">
+    <div class="input form center">
+        <h1>회원 가입</h1>
         <div class="idpass">
             <h2>사이트 이용정보 입력</h2>
             <input type="text" value="아이디"><br>
@@ -48,11 +25,12 @@
             <input type="text" value="이름"><br>
             <input type="text" value="닉네임"><br>
             <input type="text" value="email"><br>
-        </div> 
+        </div>
+        <div class="button">
+            <input type="button" value="회원가입" onclick="location.href='../login/login.html'">
+            <input type="button" value="취소" onclick="location.href='../login/login.html'">
+        </div>
     </div>
-    <div class="button">
-        <input type="button" value="회원가입" onclick="location.href='../login/login.html'">
-        <input type="button" value="취소" onclick="location.href='../login/login.html'">
-    </div>
+
 </body>
 </html>
