--- a/www_root/storyboard/html/login/login.html
+++ b/www_root/storyboard/html/login/login.html
@@ -10,12 +10,19 @@
     </style>
 </head>
 <body>
-    <div class="login">
-        <h1>로그인</h1>
-        <input type="text" value="아이디(필수)"><br>
-        <input type="text" value="비밀번호(필수)"><br>
-        <input type="button" value="로그인" onclick="location.href='../index0.html'"><br>
-        <input type="button" value="회원가입" onclick="location.href='../join/join.html'">
-    </div>
+    <form action="" method="post">
+        <div class="login form center">
+            <h1>로그인</h1>
+            <input type="text" id="uid" value="아이디"><br>
+            <input type="text" id="upw" value="비밀번호"><br>
+            <div class="button">
+                <input type="button" id="login" value="로그인" >
+                <input type="button" id="join" value="회원가입" onclick="location.href='../join/join.html'">
+            </div> 
+        </div>
+    </form>
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script src="../../js/login.js"></script>
 </body>
 </html>
+<!-- onclick="location.href='../index1.html'" -->
