--- a/www_root/storyboard/html/board/delete.html
+++ b/www_root/storyboard/html/board/delete.html
@@ -10,13 +10,13 @@
 <body>
     <div class="delete center">
         <h1>작성자의 비밀번호를 입력해주세요</h1>
-        <input type="password">
+        <input id="upw" type="password">
         <div class="button del">
-            <input type="button" value="삭제완료" onclick="location.href='../index1.html'">
+            <input type="button" id="delete" value="삭제완료">
             <input type="button" value="뒤로" onclick="location.href='list.html'">
-
         </div>
     </div>
-
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script src="../../js/board.js"></script>
 </body>
 </html>
