--- a/www_root/storyboard/html/index0.html
+++ b/www_root/storyboard/html/index0.html
@@ -5,73 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/common.css">
-    <style>
-
-    </style>
 </head>
 <body>
-    <header>
-        <div id="logo">
-            <a href="index0.html" class="menu">게시판</a>
-        </div>
-        <div id="nav-bar">
-            <ul>
-                <li><a href="login/login.html" class="menu">Login</a></li>
-                <li><a href="join/join.html" class="menu">회원가입</a></li>
-                <li><a href="index0.html" class="menu">게시판</a></li>
-            </ul>
-        </div>
-    </header>
-    <div id="content-wrap">
-        <div id="table">
-            <table>
-                <tr>
-                    <th>번 호</th>
-                    <th class ="table-contents">제 목</th>
-                    <th>작성자</th>
-                    <th>작성일</th>
-                    <th>조 회</th>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td class ="table-contents"><a href="board/list.html">게시판 글입니다 3</a></td>
-                    <td>김현겸</td>
-                    <td>2020/04/16</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td class ="table-contents"><a href="board/list.html">게시판 글입니다 2</a></td>
-                    <td>김현겸</td>
-                    <td>2020/04/16</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td class ="table-contents"><a href="board/list.html">게시판 글입니다 1</a></td>
-                    <td>김현겸</td>
-                    <td>2020/04/16</td>
-                    <td>0</td>
-                </tr>
-                <tr>
-                    <th colspan="5">1</th>
-                </tr>
-            </table>
-            <div class="button">
-                <input type="button" value="글쓰기" onclick="location.href = 'login/login.html'">
+    <div id="wrap">
+        <header>
+            <div id="logo">
+                <a href="index0.html" class="menu">게시판</a>
             </div>
+            <div id="nav-bar">
+                <ul>
+                    <li><a href="login/login.html" class="menu">Login</a></li>
+                    <li><a href="join/join.html" class="menu">회원가입</a></li>
+                    <li><a href="index0.html" class="menu">게시판</a></li>
+                </ul>
+            </div>
+        </header>
+        <div id="content-wrap">
+            <div id="table">
+                <table>
+                    <tr>
+                        <th>번 호</th>
+                        <th class ="table-contents">제 목</th>
+                        <th>작성자</th>
+                        <th>작성일</th>
+                        <th>조 회</th>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td class ="table-contents"><a href="board/list.html">게시판 글입니다 3</a></td>
+                        <td>김현겸</td>
+                        <td>2020/04/16</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td class ="table-contents"><a href="board/list.html">게시판 글입니다 2</a></td>
+                        <td>김현겸</td>
+                        <td>2020/04/16</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td class ="table-contents"><a href="board/list.html">게시판 글입니다 1</a></td>
+                        <td>김현겸</td>
+                        <td>2020/04/16</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <th colspan="5">1</th>
+                    </tr>
+                </table>
+                <div class="button">
+                    <input type="button" value="글쓰기" onclick="location.href = 'login/login.html'">
+                </div>
+            </div>
+            <footer>
+                이용약관 | 개인정보취급방침<br>
+                <span><b>서울특별시 구로구 디지털로 306</span><span>구로동, 대륭포스트타워 2차 212호,218호,219호)</span></b><br>
+                <span>t. 02-2082-1688 | F. 031-000-0000</span>  
+                <span>Copyright &copy; <b>THEJOEUN ACADEMY Corp.</b></span>  
+                <span>All Rights Reserved.</span>
+            </footer>
         </div>
     </div>
-    <footer>
-        <div id="footernav">
-        이용약관 | 개인정보취급방침
-        </div>
-        <div id="footerinfo">
-        <b>서울특별시 구로구 디지털로 306(구로동, 대륭포스트타워 2차 212호,218호,219호)</b> | t. 02-2082-1688 | F. 031-000-0000
-        </div>
-        <div id="copyright">
-        Copyright &copy; <b>THEJOEUN ACADEMY Corp.</b> All Rights Reserved.
-        </div>
-    </footer>
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script>
+    $(window).resize(function(){
+        var ht = $('header')[0].offsetHeight + $('#table')[0].offsetHeight + $('footer')[0].offsetHeight;        
+        if(ht > window.innerHeight){
+            $('footer')[0].style.position = 'relative';
+        }else{
+            $('footer')[0].style.position = 'absolute';
+        }
+    });
+</script>
 </body>
 </html>
