[2020-04-21]update(vue_project)

--- a/www_root/storyboard/html/board/list.html
+++ b/www_root/storyboard/html/board/list.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="../../img/title-icon.png" type="image/x-icon">
+    <title>게시글</title>
+    <link rel="stylesheet" href="../../css/common.css">
+    <link rel="stylesheet" href="../../css/board.css">
 </head>
-<link rel="stylesheet" href="../../css/common.css">
-<link rel="stylesheet" href="../../css/board.css">
-<style>
-
-</style>
 <body>
     <h1>글 읽기</h1>
     <div class="view">
@@ -31,7 +29,7 @@
                 <td colspan="3">게시판 글입니다.</td>
             </tr>
             <tr class="contents">
-                <td colspan="4"><textarea name="" id="" cols="30" rows="30"></textarea></td>
+                <td colspan="4"><textarea name="" id="" cols="30" rows="30"disabled>게시글</textarea></td>
             </tr>
             <tr>
                 <td colspan="4" class="tail">조회수 : 10</td>
