--- a/www_root/storyboard/html/board/update.html
+++ b/www_root/storyboard/html/board/update.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../../img/title-icon.png" type="image/x-icon">
+    <title>게시글 수정</title>
     <link rel="stylesheet" href="../../css/common.css">
     <link rel="stylesheet" href="../../css/board.css">
-    <title>Document</title>
 </head>
-    <style>
-    </style>
 <body>
     <div class="write form">
         <h1>게시판 글 수정하기</h1>
