--- a/www_root/mypage/responsive_grid.html
+++ b/www_root/mypage/responsive_grid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grid Layout 만들기</title>
 </head>
     <style>
         * {
@@ -14,12 +14,14 @@
         div{
             text-align: center;
             border: 0.1px dotted gray;
+            padding: 0 15px;
+            background-color: #eeeeee;
         }
         .dx-1{
             width: 100%;
         }
         .dx-2{
-            width: 50%;
+            width: 50.000%;
             float: left;
         }
         .dx-3{
@@ -27,11 +29,11 @@
             float: left;
         }
         .dx-4{
-            width: 25%;
+            width: 25.000%;
             float: left;
         }
         .dx-5{
-            width: 20%;
+            width: 20.000%;
             float: left;
         }
         .dx-6{
@@ -43,7 +45,7 @@
             float: left;
         }
         .dx-8{
-            width: 12.5%;
+            width: 12.500%;
             float: left;
         }
         .dx-9{
@@ -51,11 +53,11 @@
             float: left;
         }
         .dx-10{
-            width: 10%;
+            width: 10.000%;
             float: left;
         }
         .dx-11{
-            width: 9.09%;
+            width: 9.090%;
             float: left;
         }
         .dx-12{
@@ -66,81 +68,27 @@
 <body>
     <h1>this is responsive grid template.</h1>
     <div class="dx-1">dx-1</div>
+
     <div class="dx-2">dx-2</div><div class="dx-2">dx-2</div>
-    <div class="dx-3">dx-3</div>
-    <div class="dx-3">dx-3</div>
-    <div class="dx-3">dx-3</div>
-    <div class="dx-4">dx-4</div>
-    <div class="dx-4">dx-4</div>
-    <div class="dx-4">dx-4</div>
-    <div class="dx-4">dx-4</div>
-    <div class="dx-5">dx-5</div>
-    <div class="dx-5">dx-5</div>
-    <div class="dx-5">dx-5</div>
-    <div class="dx-5">dx-5</div>
-    <div class="dx-5">dx-5</div>
-    <div class="dx-6">dx-6</div>
-    <div class="dx-6">dx-6</div>
-    <div class="dx-6">dx-6</div>
-    <div class="dx-6">dx-6</div>
-    <div class="dx-6">dx-6</div>
-    <div class="dx-6">dx-6</div>
-    <div class="dx-7">dx-7</div>
-    <div class="dx-7">dx-7</div>
-    <div class="dx-7">dx-7</div>
-    <div class="dx-7">dx-7</div>
-    <div class="dx-7">dx-7</div>
-    <div class="dx-7">dx-7</div>
-    <div class="dx-7">dx-7</div>
-    <div class="dx-8">dx-8</div>
-    <div class="dx-8">dx-8</div>
-    <div class="dx-8">dx-8</div>
-    <div class="dx-8">dx-8</div>
-    <div class="dx-8">dx-8</div>
-    <div class="dx-8">dx-8</div>
-    <div class="dx-8">dx-8</div>
-    <div class="dx-8">dx-8</div>
-    <div class="dx-9">dx-9</div>
-    <div class="dx-9">dx-9</div>
-    <div class="dx-9">dx-9</div>
-    <div class="dx-9">dx-9</div>
-    <div class="dx-9">dx-9</div>
-    <div class="dx-9">dx-9</div>
-    <div class="dx-9">dx-9</div>
-    <div class="dx-9">dx-9</div>
-    <div class="dx-9">dx-9</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-10">dx-10</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-11">dx-11</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
-    <div class="dx-12">dx-12</div>
+
+    <div class="dx-3">dx-3</div><div class="dx-3">dx-3</div><div class="dx-3">dx-3</div>
+
+    <div class="dx-4">dx-4</div><div class="dx-4">dx-4</div><div class="dx-4">dx-4</div><div class="dx-4">dx-4</div>
+
+    <div class="dx-5">dx-5</div><div class="dx-5">dx-5</div><div class="dx-5">dx-5</div><div class="dx-5">dx-5</div><div class="dx-5">dx-5</div>
+
+    <div class="dx-6">dx-6</div><div class="dx-6">dx-6</div><div class="dx-6">dx-6</div><div class="dx-6">dx-6</div><div class="dx-6">dx-6</div><div class="dx-6">dx-6</div>
+
+    <div class="dx-7">dx-7</div><div class="dx-7">dx-7</div><div class="dx-7">dx-7</div><div class="dx-7">dx-7</div><div class="dx-7">dx-7</div><div class="dx-7">dx-7</div><div class="dx-7">dx-7</div>
+
+    <div class="dx-8">dx-8</div><div class="dx-8">dx-8</div><div class="dx-8">dx-8</div><div class="dx-8">dx-8</div><div class="dx-8">dx-8</div><div class="dx-8">dx-8</div><div class="dx-8">dx-8</div><div class="dx-8">dx-8</div>
+
+    <div class="dx-9">dx-9</div><div class="dx-9">dx-9</div><div class="dx-9">dx-9</div><div class="dx-9">dx-9</div><div class="dx-9">dx-9</div><div class="dx-9">dx-9</div><div class="dx-9">dx-9</div><div class="dx-9">dx-9</div><div class="dx-9">dx-9</div>
+
+    <div class="dx-10">dx-10</div><div class="dx-10">dx-10</div><div class="dx-10">dx-10</div><div class="dx-10">dx-10</div><div class="dx-10">dx-10</div><div class="dx-10">dx-10</div><div class="dx-10">dx-10</div><div class="dx-10">dx-10</div><div class="dx-10">dx-10</div><div class="dx-10">dx-10</div>
+    
+    <div class="dx-11">dx-11</div><div class="dx-11">dx-11</div><div class="dx-11">dx-11</div><div class="dx-11">dx-11</div><div class="dx-11">dx-11</div><div class="dx-11">dx-11</div><div class="dx-11">dx-11</div><div class="dx-11">dx-11</div><div class="dx-11">dx-11</div><div class="dx-11">dx-11</div><div class="dx-11">dx-11</div>
+
+    <div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div><div class="dx-12">dx-12</div>
 </body>
 </html>
