--- a/www_root/storyboard/html/board/delete.html
+++ b/www_root/storyboard/html/board/delete.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../../img/title-icon.png" type="image/x-icon">
+    <title>게시글 삭제</title>
     <link rel="stylesheet" href="../../css/common.css">
     <link rel="stylesheet" href="../../css/board.css">
-    <title>Document</title>
 </head>
 <body>
     <div class="delete center">
