--- a/www_root/storyboard/html/board/write.html
+++ b/www_root/storyboard/html/board/write.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../../img/title-icon.png" type="image/x-icon">
+    <title>글쓰기</title>
     <link rel="stylesheet" href="../../css/common.css">
     <link rel="stylesheet" href="../../css/board.css">
-    <title>Document</title>
 </head>
-    <style>
-    </style>
+
 <body>
     <div class="write form">
         <h1>게시판 글쓰기</h1>
