--- a/www_root/storyboard/html/index0.html
+++ b/www_root/storyboard/html/index0.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>게시판</title>
+    <link rel="shortcut icon" href="../img/title-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/common.css">
 </head>
 <body>
