--- a/www_root/storyboard/html/join/join.html
+++ b/www_root/storyboard/html/join/join.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="../../img/title-icon.png" type="image/x-icon">
+    <title>회원가입</title>
     <link rel="stylesheet" href="../../css/common.css">
     <link rel="stylesheet" href="../../css/join.css">
-    <style>
-
-
-    </style>
 </head>
 <body>
     <div class="input form center">
@@ -26,7 +23,7 @@
             <span>닉네임</span><input type="text" id="nick" value="닉네임"><br>
             <span class="notice">공백없이 한글, 영문, 숫자만 입력 가능(한글2자, 영문4자 이상)닉네임을 바꾸시면 앞으로 60일 이내에는 변경할 수 없습니다.</span><br>
             <span>이름</span><input type="text" id="name" value="이름"><br>
-            <span>email</span><input type="text" id="mail" value="email"><br>
+            <span>email</span><input type="text" id="email" value="email"><br>
         </div>
         <div class="button">
             <input type="button" id="join" value="회원가입">
