--- a/www_root/storyboard/html/login/login.html
+++ b/www_root/storyboard/html/login/login.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="../../img/title-icon.png" type="image/x-icon">
+    <title>로그인</title>
     <link rel="stylesheet" href="../../css/common.css">
     <link rel="stylesheet" href="../../css/login.css">
-    <style>
-    </style>
 </head>
 <body>
     <form action="" method="post">
@@ -18,11 +17,10 @@
             <div class="button">
                 <input type="button" id="login" value="로그인" >
                 <input type="button" id="join" value="회원가입" onclick="location.href='../join/join.html'">
-            </div> 
+            </div>
         </div>
     </form>
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 <script src="../../js/login.js"></script>
 </body>
 </html>
-<!-- onclick="location.href='../index1.html'" -->
