[2020-04-23]update(vue-todo)

--- a/www_root/mypage/SPA.html
+++ b/www_root/mypage/SPA.html
@@ -227,7 +227,7 @@
         border: 2px solid #95e1d3;
         margin: 5px;
     }
-    .comment>h1,hr{
+    .comment>h1,.comment>hr{
         display: inline-block;
     }
     .comment>h1{
