--- a/www_root/storyboard/html/login/login.html
+++ b/www_root/storyboard/html/login/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../css/login.css">
 </head>
 <body>
-    <form action="" method="post">
+    <form action="" method="post" name="loginform">
         <div class="login form center">
             <h1>로그인</h1>
             <input type="text" id="uid" value="아이디"><br>
